Connecting front-end and back-end

--- a/video-conference/front-end/package.json
+++ b/video-conference/front-end/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "mediasoup-client": "^3.11.0",
+    "socket.io-client": "^4.8.1"
   }
 }
