--- a/recap/basics/package.json
+++ b/recap/basics/package.json
@@ -1,13 +1,14 @@
 {
   "name": "basics",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ujjal B. Allen",
   "license": "ISC",
   "description": "",
   "dependencies": {
